tests/errors/existing_c_file.pyx
# mode: error
# tag: build

# It is a common gotcha for new users to name the .pyx file like the library (.c) file that they want to wrap,
# and then Cython overwrites that file on output: This can lead to weird errors and data loss.

cdef extern from "existing_c_file.c":
    int external_function(int)

print(external_function(2))


_ERRORS = """
1:0: The output file already exists and does not look like it was generated by Cython: "existing_c_file.c"
"""
